# Adv360-Pro-ZMK

./: .gitignore  README.md  build.sh  draw.sh  keymap_drawer.config.yaml  pyproject.toml
.github/workflows/: draw-keymaps.yml
config/: adv360.keymap  west.yml
config/boards/arm/adv360/: adv360_left_defconfig  adv360_right_defconfig
